--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
                   </p>
                 </div>
 
+                <div class="pt-8 pb-">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Before we get started</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">If I didnt get you, its my bad (mostly because I dont know enough to make a judgement)</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/3ohhwHMVa48LuPaEak" width="480" height="199" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvelstudios-3ohhwHMVa48LuPaEak">via GIPHY</a></p>
+                    </div>
+                </div>
+
+
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Kade | Captain America</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">Fearless leader, pump up speeches, that kind of thing.</p>
@@ -30,7 +39,7 @@
                 </div>
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Jerred | Iron Man</h2>
-                    <p class="font-extrabold text-center text-1xl pb-4">Plays with well with technology, emotional brickwall</p>
+                    <p class="font-extrabold text-center text-1xl pb-4">Plays with well with technology, emotionally unavailable</p>
                     <div class="mx-auto block text-center">
                         <iframe src="https://giphy.com/embed/11e56tPCqD9kjK" width="480" height="240" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/iron-man-movie-robert-downey-jr-11e56tPCqD9kjK">via GIPHY</a></p>
                     </div>
@@ -126,7 +135,7 @@
 
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Parker | Ant Man</h2>
-                    <p class="font-extrabold text-center text-1xl pb-4">Tries hard, gets back up when knocked down, overall I respect it.</p>
+                    <p class="font-extrabold text-center text-1xl pb-4">Tries hard, gets back up when knocked down (swiped left on), overall I respect it.</p>
                     <div class="mx-auto block text-center">
                         <iframe src="https://giphy.com/embed/VIybTqiAz8E5W" width="480" height="446" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/paul-rudd-ant-man-blooper-reel-VIybTqiAz8E5W">via GIPHY</a></p>
                     </div>
@@ -135,8 +144,28 @@
                     <h2 class="font-extrabold text-center text-3xl pb-4">Kenley | Wasp</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">Keeps Parker, and her team, in line.</p>
                     <div class="mx-auto block text-center">
-                        <iframe src="https://giphy.com/embed/VIul6kR8mDHzXoVMLv" width="480" height="480" frameBorder="0" class="giphy-embed block mx-auto"" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvelstudios-VIul6kR8mDHzXoVMLv">via GIPHY</a></p>                    
+                        <iframe src="https://giphy.com/embed/VIul6kR8mDHzXoVMLv" width="480" height="480" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvelstudios-VIul6kR8mDHzXoVMLv">via GIPHY</a></p>                    
                     </div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Meagan | Okuye/Dora Milaje</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">Spreads the word of Primitive around Lubbock, like the Dora Milaje do for Wakanda.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/st7t2mTqc3DPqcpwps" width="480" height="270" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disneyplus-st7t2mTqc3DPqcpwps">via GIPHY</a></p>
+                    </div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Josh | Valkyrie</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">Reluctant to get involved, but a solid asset once they join up.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/2UIuDfrmLWOFAyT3Tt" width="480" height="480" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mrw-dreams-bruce-2UIuDfrmLWOFAyT3Tt">via GIPHY</a></p>
+                    </div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Jake | Korg</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">I dont really know you, but you seem funny.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/d5JAfVJD7pIQEXxDBQ" width="480" height="235" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/giphyqa-d5JAfVJD7pIQEXxDBQ">via GIPHY</a></p></div>
                 </div>
               </main>
             </div>
