--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   </p>
                 </div>
 
-                <div class="pt-8 pb-">
+                <div class="pt-8 pb-96">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Before we get started</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">If I didnt get you, its my bad (mostly because I dont know enough to make a judgement)</p>
                     <div class="mx-auto block text-center">
