--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     </div>
                 </div>
 
+                <div class="pt-8 pb-96">
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/3o7btY5JUf60CZeHny" width="480" height="282" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvel-guardians-of-the-galaxy-2-3o7btY5JUf60CZeHny">via GIPHY</a></p>
+                    </div>
+                </div>
+
 
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Kade | Captain America</h2>
@@ -167,9 +173,61 @@
                     <div class="mx-auto block text-center">
                         <iframe src="https://giphy.com/embed/d5JAfVJD7pIQEXxDBQ" width="480" height="235" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/giphyqa-d5JAfVJD7pIQEXxDBQ">via GIPHY</a></p></div>
                 </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Michael | Drax</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">Lurks incredibly still the shadows of Slack, but gets the job done when needed.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/vkbfsVHULOyR2" width="480" height="480" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/guardians-of-the-galaxy-drax-destroyer-gotg-edit-vkbfsVHULOyR2">via GIPHY</a></p>
+                    </div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Hunter | Rocket</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">always playing with new and fun gadgets, and good to have around.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/Ecn8EldZOQGYM" width="480" height="441" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/true-thats-that-is-also-Ecn8EldZOQGYM">via GIPHY</a></p></div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Lauren | Sorcerer Supreme</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">Teaching the interns the good word, but you are a mystery to me.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/26AHKGvq2zAJmfDj2" width="480" height="198" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/drstrangetrailer-26AHKGvq2zAJmfDj2">via GIPHY</a></p>
+                    </div>
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Brooke | Groot</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">I imagine you are saing the same three words to your newborn kid so this kind of works?</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/d3sE6FcNZa7Ju" width="360" height="480" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/guardians-of-the-galaxy-groot-i-am-d3sE6FcNZa7Ju">via GIPHY</a></p> </div>
+                </div>  
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Liz | Scarlet Witch</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">super powerful office mom</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/0HFSyLI18E4TzvQkfN" width="480" height="200" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nerdist-scarlet-witch-wandavision-wanda-0HFSyLI18E4TzvQkfN">via GIPHY</a></p>                
+                    </div>  
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Danielle | Black Panther</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">kind of secretive, hiding away in florida working on making our grammar gooder (it's a word now).</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/o6FWop1Gbuyly" width="480" height="199" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/forums-superherohype-panther-o6FWop1Gbuyly">via GIPHY</a></p>                    
+                    </div>  
+                </div>
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Heather | Gamora</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">fearlessly leading the makreting team</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/3o7buaZlGjDH5xQ8Ew" width="480" height="282" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvel-guardians-of-the-galaxy-2-3o7buaZlGjDH5xQ8Ew">via GIPHY</a></p></div>  
+                </div>  
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Jess | Vision</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">because you are laying a vision for our future (that was clever).</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/FGxCmHRK2TDxw2L0m7" width="480" height="270" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disneyplus-disney-marvel-wandavision-FGxCmHRK2TDxw2L0m7">via GIPHY</a></p>
+                    </div>  
+                </div>                 
               </main>
             </div>
           </div>
-    
+
     </body>
-    
