--- a/index.html
+++ b/index.html
@@ -225,9 +225,27 @@
                     <div class="mx-auto block text-center">
                         <iframe src="https://giphy.com/embed/FGxCmHRK2TDxw2L0m7" width="480" height="270" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disneyplus-disney-marvel-wandavision-FGxCmHRK2TDxw2L0m7">via GIPHY</a></p>
                     </div>  
-                </div>                 
+                </div> 
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Madera | Thanos</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">not sure I need to explain this one.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/ie76dJeem4xBDcf83e" width="480" height="270" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/thanos-i-am-inevitable-ie76dJeem4xBDcf83e">via GIPHY</a></p>
+                    </div>  
+                </div> 
+                
+                <div class="pt-8">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">That's it!</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">hope yall enjoyed this silliness!</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/N97kHQgG33rUI" width="480" height="253" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/the-avengers-dog-N97kHQgG33rUI">via GIPHY</a></p>
+                    </div>  
+                </div> 
               </main>
             </div>
           </div>
 
     </body>
+
+
+
