--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Heather | Gamora</h2>
-                    <p class="font-extrabold text-center text-1xl pb-4">fearlessly leading the makreting team</p>
+                    <p class="font-extrabold text-center text-1xl pb-4">fearlessly leading the marketing team</p>
                     <div class="mx-auto block text-center">
                         <iframe src="https://giphy.com/embed/3o7buaZlGjDH5xQ8Ew" width="480" height="282" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/marvel-guardians-of-the-galaxy-2-3o7buaZlGjDH5xQ8Ew">via GIPHY</a></p></div>  
                 </div>  
