--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                     </div>
                 </div>
 
+                <div class="pt-8 pb-96">
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/ncsQI9sF3pa8w" width="480" height="443" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/idiot-sanders-fraud-ncsQI9sF3pa8w">via GIPHY</a></p>
+                    </div>
+                </div>
+
+
 
                 <div class="pt-8">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Kade | Captain America</h2>
