--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
                         <iframe src="https://giphy.com/embed/0HFSyLI18E4TzvQkfN" width="480" height="200" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nerdist-scarlet-witch-wandavision-wanda-0HFSyLI18E4TzvQkfN">via GIPHY</a></p>                
                     </div>  
                 </div>
+
+                <div class="pt-16 pb-96">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Sydney | Winter Solider/Bucky Barnes</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">the person that will ride or die with you and then tell you it was a bad idea</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/Ie97ZND9e4GkfGsTN2" width="272" height="480" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/Ie97ZND9e4GkfGsTN2">via GIPHY</a></p></div>  
+                </div>
+
                 <div class="pt-16 pb-96">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Danielle | Black Panther</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">kind of secretive, hiding away in florida working on making our grammar gooder (it's a word now).</p>
