--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
                 </div>
 
                 <div class="pt-16 pb-96">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Morgan R | Pepper Potts</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">managing our social media channels is like managing Stark Industries</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/Qxe0Hi0OgAlJT5yEfs" width="480" height="201" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nerdist-iron-man-endgame-avengers-Qxe0Hi0OgAlJT5yEfs">via GIPHY</a></p>
+                    </div>  
+                </div>
+
+                <div class="pt-16 pb-96">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Sydney | Winter Solider/Bucky Barnes</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">the person that will ride or die with you and then tell you it was a bad idea</p>
                     <div class="mx-auto block text-center">
