--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
                 </div>
 
                 <div class="pt-16 pb-96">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Abdul | Quicksilver</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">bangs out code faster than anyone I know</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/A3nyzU9uQ9iGk" width="480" height="270" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/quicksilver-hawkeye-hawksilver-A3nyzU9uQ9iGk">via GIPHY</a></p>
+                    </div>  
+                </div>
+
+
+                <div class="pt-16 pb-96">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Danielle | Black Panther</h2>
                     <p class="font-extrabold text-center text-1xl pb-4">kind of secretive, hiding away in florida working on making our grammar gooder (it's a word now).</p>
                     <div class="mx-auto block text-center">
