--- a/index.html
+++ b/index.html
@@ -239,6 +239,14 @@
                     </div>  
                 </div>
 
+                <div class="pt-16 pb-96">
+                    <h2 class="font-extrabold text-center text-3xl pb-4">Carolina | Nebula</h2>
+                    <p class="font-extrabold text-center text-1xl pb-4">At first, I thought you were plotting my demise, but then I realized you are pretty cool.</p>
+                    <div class="mx-auto block text-center">
+                        <iframe src="https://giphy.com/embed/1hq5lQkbLmerXZ6DhP" width="480" height="197" frameBorder="0" class="giphy-embed block mx-auto" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nerdist-rocket-endgame-avengers-1hq5lQkbLmerXZ6DhP">via GIPHY</a></p></div>  
+                </div>
+                
+
 
                 <div class="pt-16 pb-96">
                     <h2 class="font-extrabold text-center text-3xl pb-4">Danielle | Black Panther</h2>
